[package]
name = "toybox"
version = "0.1.2"
edition = "2024"
authors = ["Philipp Brendel <waldrumpus@gmail.com>"]
license = "MIT"
repository = "https://github.com/brend/toybox.git"
description = "A toybox for learning Rust"
keywords = ["rust", "learning", "creative"]

[dependencies]
raylib = "5.0.0"
rand = "0.8.4"